--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "vercel-build": "npm install"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Khotso Selading",
+  "license": "MIT",
   "dependencies": {
     "@supabase/supabase-js": "^1.35.3",
     "stripe": "^9.9.0"
